<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Client</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="registerText">Register</string>
    <string name="loginText">Login</string>
    <string name="admin_activity_label">Admin Page</string>
    <string name="category_management_activity_label">Category Management</string>
    <string name="product_management_activity_label">Product Management</string>
    <string name="category_name">Category Name</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="add_category">Add Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="categories_list">Categories List</string>
    <string name="choose_category">Choose Category</string>
    <string name="search_product_by_name">Search product by name</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="stock_quantity">Stock Quantity</string>
    <string name="search">Search</string>
    <string name="delete_product">Delete Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="product_stock">Stock</string>
    <string name="product_image_url">Image Url</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="view_cart">View Cart</string>
    <string name="plus">+</string>
    <string name="_1">1</string>
    <string name="tru">-</string>
    <string name="shopping">Shopping</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="user_activity_label">User Page</string>
    <string name="product_selection_activity_label">Product</string>
    <string name="cart_activity_label">Cart</string>
    <string name="order">Order</string>
    <string name="cart_item">Cart Item</string>
    <string name="delete">Delete</string>
    <string name="order_history">Order History</string>
    <string name="manage_orders">Manage Orders</string>
    <string name="manage_products">Manage Products</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="update_order_status">Update Order Status</string>
    <string name="orders_management">Orders Management</string>
    <!-- Add other strings here -->
</resources>
