<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/shopping_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:text="@string/shopping" />

    <Button
        android:id="@+id/go_to_cart_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:text="@string/go_to_cart"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/history_order_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_history"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:layout_marginTop="16dp" />
</LinearLayout>
