<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/manage_categories_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:text="@string/manage_categories" />

    <Button
        android:id="@+id/manage_products_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_products"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/manage_orders_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_orders"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:layout_marginTop="16dp" />


</LinearLayout>
