<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_app"
    android:padding="16dp">

    <!-- Search bar for searching products by name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_product_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:hint="@string/search_product_by_name"
            android:textColorHint="@color/white"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@drawable/button_background"
            android:text="@string/search" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textColor="@color/white"
        android:text="@string/choose_category">
    </TextView>

    <!-- Spinner for filtering products by category -->
    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <!-- RecyclerView for displaying the list of products -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_products"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/view_cart_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_cart"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:layout_marginTop="16dp" />
</LinearLayout>
