<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white"
    android:layout_marginBottom="8dp">

    <!-- Image, name, category, price, stock -->
    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/product_stock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@android:color/black" />

    <!-- Quantity selection -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/decrement_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tru" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/_1"
            android:textSize="16sp"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/increment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus" />

    </LinearLayout>

    <!-- Add to cart button -->
    <Button
        android:id="@+id/add_to_cart_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_cart" />

</LinearLayout>
