<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background_app">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textColor="@color/white"
        android:text="@string/categories_list">
    </TextView>

    <!-- RecyclerView to display the list of categories -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_categories"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" />

    <!-- Button for adding a new category -->
    <Button
        android:id="@+id/add_category_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_category"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:layout_marginTop="16dp" />

    <!-- Button for editing a category -->
    <Button
        android:id="@+id/edit_category_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_category"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:layout_marginTop="16dp" />

    <!-- Button for deleting a category -->
    <Button
        android:id="@+id/delete_category_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Delete Category"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:layout_marginTop="16dp" />
</LinearLayout>
